--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,36 @@ gtts==2.3.1
 sounddevice==0.4.6
 SpeechRecognition==3.8.1
 gunicorn==20.1.0
+beautifulsoup4==4.12.2
+blinker==1.6.2
+certifi==2023.7.22
+charset-normalizer==3.2.0
+click==8.1.6
+colorama==0.4.6
+comtypes==1.2.0
+docopt==0.6.2
+Flask==2.2.4
+gunicorn==21.2.0
+idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+Js2Py==0.74
+MarkupSafe==2.1.3
+packaging==23.1
+pipwin==0.5.2
+PyAudio==0.2.13
+pyjsparser==2.7.1
+pypiwin32==223
+PyPrind==2.11.3
+pySmartDL==1.3.4
+pyttsx3==2.90
+pywin32==306
+requests==2.31.0
+six==1.16.0
+soupsieve==2.4.1
+SpeechRecognition==3.9.0
+tzdata==2023.3
+tzlocal==5.0.1
+urllib3==2.0.4
+Werkzeug==2.2.3
+wikipedia==1.4.0
