--- a/render.yaml
+++ b/render.yaml
@@ -1,5 +1,6 @@
 services:
   - type: web
     buildCommand: |
-      apt-get update && apt-get install -y portaudio19-dev python3-pyaudio
+      sudo apt-get update && sudo apt-get install -y portaudio19-dev python3-pyaudio
       pip install -r requirements.txt
+    startCommand: gunicorn app:app
