--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,7 @@
 services:
   - type: web
     buildCommand: |
-      sudo apt-get update && sudo apt-get install -y portaudio19-dev python3-pyaudio
+      chmod +x prebuild.sh
+      ./prebuild.sh
       pip install -r requirements.txt
     startCommand: gunicorn app:app
