--- a/requirements.txt
+++ b/requirements.txt
@@ -3,20 +3,18 @@ Werkzeug
 python-dotenv
 groq
 gtts
-SpeechRecognition 
-gunicorn 
-beautifulsoup4 
+SpeechRecognition
 gunicorn
+beautifulsoup4
 idna
 packaging
 pipwin
-PyAudio 
 pyjsparser
 PyPrind
 pySmartDL
 pyttsx3
 requests
 urllib3
-Werkzeug
 wikipedia
 datetime
+PyAudio==0.2.13
