--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,6 @@ urllib3
 wikipedia
 datetime
 PyAudio==0.2.13
+
+# Other requirements...
+./wheels/PyAudio-0.2.13-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
